--- a/package.json
+++ b/package.json
@@ -9,18 +9,55 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.60",
+    "@aws-sdk/client-s3": "^3.645.0",
+    "@clerk/nextjs": "^5.4.1",
+    "@langchain/community": "^0.2.31",
+    "@neondatabase/serverless": "^0.9.5",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^3.0.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.54.1",
+    "@types/md5": "^2.3.5",
+    "ai": "^3.3.41",
+    "aws-sdk": "^2.1690.0",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.24.2",
+    "drizzle-orm": "^0.33.0",
+    "install": "^0.13.0",
+    "langchain": "^0.2.17",
+    "lucide-react": "^0.438.0",
+    "md5": "^2.3.0",
+    "next": "14.2.7",
+    "npm": "^10.8.3",
+    "openai-edge": "^1.2.2",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "stripe": "^16.12.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7"
+    "typescript": "^5"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
