--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.60",
     "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/client-textract": "^3.654.0",
+    "@aws-sdk/credential-providers": "^3.654.0",
     "@clerk/nextjs": "^5.4.1",
     "@langchain/community": "^0.2.31",
     "@neondatabase/serverless": "^0.9.5",
